<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
   >
    <TextView
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:text="@string/subject"
    android:gravity="center"
    android:layout_weight="1"
        android:id="@+id/subjectTextView"
        android:padding="16dp"
    />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/marks"
        android:gravity="center"
        android:layout_weight="1"
        android:id="@+id/total_marks"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/marks_achived"
        android:gravity="center"
        android:layout_weight="1"
        android:id="@+id/marks_achived"
        />

</LinearLayout>